--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                     </div>
                     
                 </div>
+                <div class="buttons">
+                    <button id="testdrive">TEST DRIVE</button>
+                    <button id="booknow">BOOK NOW</button>
+                </div>
             </div>
             <div class="two">
                 <div class="while">
